introCompilers/AST/quack.output
Terminals unused in grammar

   AND
   OR
   NOT
   DIF


State 14 conflicts: 1 shift/reduce
State 32 conflicts: 4 shift/reduce
State 36 conflicts: 12 shift/reduce
State 65 conflicts: 4 shift/reduce
State 66 conflicts: 4 shift/reduce
State 67 conflicts: 4 shift/reduce
State 68 conflicts: 12 shift/reduce
State 69 conflicts: 4 shift/reduce
State 70 conflicts: 4 shift/reduce
State 71 conflicts: 4 shift/reduce
State 72 conflicts: 4 shift/reduce
State 73 conflicts: 4 shift/reduce
State 74 conflicts: 12 shift/reduce
State 75 conflicts: 12 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: Classes Statements

    2 Classes: %empty
    3        | Classes Class

    4 Statements: %empty
    5           | Statements Statement

    6 Class: Class_Signature Class_Body

    7 Class_Signature: "class" IDENT "(" Formal_Args ")" Class_Sig_Extends

    8 Class_Sig_Extends: %empty
    9                  | EXTENDS IDENT

   10 Formal_Args: %empty
   11            | IDENT ":" IDENT Idents

   12 Idents: %empty
   13       | Idents Ident

   14 Ident: "," IDENT ":" IDENT

   15 Class_Body: "{" Statements Methods "}"

   16 Statement: WHILE R_Expr Statement_Block
   17          | IF R_Expr Statement_Block Elifs Else
   18          | Statement_Block
   19          | L_Expr "=" R_Expr ";"
   20          | L_Expr ":" IDENT "=" R_Expr ";"
   21          | R_Expr ";"
   22          | RETURN ";"
   23          | RETURN R_Expr ";"

   24 Elifs: %empty
   25      | ELIF R_Expr Statement_Block Elifs

   26 Else: %empty
   27     | ELSE Statement_Block

   28 Statement_Block: "{" "}"
   29                | "{" Statements "}"

   30 Methods: %empty
   31        | Methods Method

   32 Method: DEF IDENT "(" Formal_Args ")" Method_Opt Statement_Block

   33 Method_Opt: %empty
   34           | ":" IDENT

   35 L_Expr: IDENT
   36       | R_Expr "." IDENT

   37 R_Expr: STRING_LIT
   38       | INT_LIT
   39       | L_Expr
   40       | R_Expr "+" R_Expr
   41       | R_Expr "-" R_Expr
   42       | R_Expr "*" R_Expr
   43       | R_Expr "/" R_Expr
   44       | "-" R_Expr
   45       | R_Expr "==" R_Expr
   46       | R_Expr "<=" R_Expr
   47       | R_Expr "<" R_Expr
   48       | R_Expr ">=" R_Expr
   49       | R_Expr ">" R_Expr
   50       | R_Expr "AND" R_Expr
   51       | R_Expr "OR" R_Expr
   52       | "NOT" R_Expr
   53       | R_Expr "." IDENT "(" Actual_Args ")"
   54       | IDENT "(" Actual_Args ")"
   55       | "(" R_Expr ")"

   56 Actual_Args: %empty
   57            | R_Expr R_Exprs

   58 R_Exprs: %empty
   59        | "," R_Expr


Terminals, with rules where they appear

$end (0) 0
error (256)
"class" (258) 7
DEF (259) 32
EXTENDS (260) 9
ELIF (261) 25
ELSE (262) 27
WHILE (263) 16
RETURN (264) 22 23
IF (265) 17
AND (266)
OR (267)
NOT (268)
";" (269) 19 20 21 22 23
":" (270) 11 14 20 34
"(" (271) 7 32 53 54 55
")" (272) 7 32 53 54 55
"." (273) 36 53
"," (274) 14 59
"+" (275) 40
"-" (276) 41 44
"*" (277) 42
"/" (278) 43
"==" (279) 45
"<=" (280) 46
">=" (281) 48
"<" (282) 47
">" (283) 49
"=" (284) 19 20
"{" (285) 15 28 29
"}" (286) 15 28 29
DIF (287)
IDENT (288) 7 9 11 14 20 32 34 35 36 53 54
INT_LIT (289) 38
STRING_LIT (290) 37
"AND" (291) 50
"OR" (292) 51
"NOT" (293) 52


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
Program (40)
    on left: 1, on right: 0
Classes (41)
    on left: 2 3, on right: 1 3
Statements (42)
    on left: 4 5, on right: 1 5 15 29
Class (43)
    on left: 6, on right: 3
Class_Signature (44)
    on left: 7, on right: 6
Class_Sig_Extends (45)
    on left: 8 9, on right: 7
Formal_Args (46)
    on left: 10 11, on right: 7 32
Idents (47)
    on left: 12 13, on right: 11 13
Ident (48)
    on left: 14, on right: 13
Class_Body (49)
    on left: 15, on right: 6
Statement (50)
    on left: 16 17 18 19 20 21 22 23, on right: 5
Elifs (51)
    on left: 24 25, on right: 17 25
Else (52)
    on left: 26 27, on right: 17
Statement_Block (53)
    on left: 28 29, on right: 16 17 18 25 27 32
Methods (54)
    on left: 30 31, on right: 15 31
Method (55)
    on left: 32, on right: 31
Method_Opt (56)
    on left: 33 34, on right: 32
L_Expr (57)
    on left: 35 36, on right: 19 20 39
R_Expr (58)
    on left: 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54
    55, on right: 16 17 19 20 21 23 25 36 40 41 42 43 44 45 46 47 48
    49 50 51 52 53 55 57 59
Actual_Args (59)
    on left: 56 57, on right: 53 54
R_Exprs (60)
    on left: 58 59, on right: 57


State 0

    0 $accept: . Program $end

    $default  reduce using rule 2 (Classes)

    Program  go to state 1
    Classes  go to state 2


State 1

    0 $accept: Program . $end

    $end  shift, and go to state 3


State 2

    1 Program: Classes . Statements
    3 Classes: Classes . Class

    "class"  shift, and go to state 4

    $default  reduce using rule 4 (Statements)

    Statements       go to state 5
    Class            go to state 6
    Class_Signature  go to state 7


State 3

    0 $accept: Program $end .

    $default  accept


State 4

    7 Class_Signature: "class" . IDENT "(" Formal_Args ")" Class_Sig_Extends

    IDENT  shift, and go to state 8


State 5

    1 Program: Classes Statements .
    5 Statements: Statements . Statement

    WHILE       shift, and go to state 9
    RETURN      shift, and go to state 10
    IF          shift, and go to state 11
    "("         shift, and go to state 12
    "-"         shift, and go to state 13
    "{"         shift, and go to state 14
    IDENT       shift, and go to state 15
    INT_LIT     shift, and go to state 16
    STRING_LIT  shift, and go to state 17
    "NOT"       shift, and go to state 18

    $default  reduce using rule 1 (Program)

    Statement        go to state 19
    Statement_Block  go to state 20
    L_Expr           go to state 21
    R_Expr           go to state 22


State 6

    3 Classes: Classes Class .

    $default  reduce using rule 3 (Classes)


State 7

    6 Class: Class_Signature . Class_Body

    "{"  shift, and go to state 23

    Class_Body  go to state 24


State 8

    7 Class_Signature: "class" IDENT . "(" Formal_Args ")" Class_Sig_Extends

    "("  shift, and go to state 25


State 9

   16 Statement: WHILE . R_Expr Statement_Block

    "("         shift, and go to state 12
    "-"         shift, and go to state 13
    IDENT       shift, and go to state 15
    INT_LIT     shift, and go to state 16
    STRING_LIT  shift, and go to state 17
    "NOT"       shift, and go to state 18

    L_Expr  go to state 26
    R_Expr  go to state 27


State 10

   22 Statement: RETURN . ";"
   23          | RETURN . R_Expr ";"

    ";"         shift, and go to state 28
    "("         shift, and go to state 12
    "-"         shift, and go to state 13
    IDENT       shift, and go to state 15
    INT_LIT     shift, and go to state 16
    STRING_LIT  shift, and go to state 17
    "NOT"       shift, and go to state 18

    L_Expr  go to state 26
    R_Expr  go to state 29


State 11

   17 Statement: IF . R_Expr Statement_Block Elifs Else

    "("         shift, and go to state 12
    "-"         shift, and go to state 13
    IDENT       shift, and go to state 15
    INT_LIT     shift, and go to state 16
    STRING_LIT  shift, and go to state 17
    "NOT"       shift, and go to state 18

    L_Expr  go to state 26
    R_Expr  go to state 30


State 12

   55 R_Expr: "(" . R_Expr ")"

    "("         shift, and go to state 12
    "-"         shift, and go to state 13
    IDENT       shift, and go to state 15
    INT_LIT     shift, and go to state 16
    STRING_LIT  shift, and go to state 17
    "NOT"       shift, and go to state 18

    L_Expr  go to state 26
    R_Expr  go to state 31


State 13

   44 R_Expr: "-" . R_Expr

    "("         shift, and go to state 12
    "-"         shift, and go to state 13
    IDENT       shift, and go to state 15
    INT_LIT     shift, and go to state 16
    STRING_LIT  shift, and go to state 17
    "NOT"       shift, and go to state 18

    L_Expr  go to state 26
    R_Expr  go to state 32


State 14

   28 Statement_Block: "{" . "}"
   29                | "{" . Statements "}"

    "}"  shift, and go to state 33

    "}"       [reduce using rule 4 (Statements)]
    $default  reduce using rule 4 (Statements)

    Statements  go to state 34


State 15

   35 L_Expr: IDENT .
   54 R_Expr: IDENT . "(" Actual_Args ")"

    "("  shift, and go to state 35

    $default  reduce using rule 35 (L_Expr)


State 16

   38 R_Expr: INT_LIT .

    $default  reduce using rule 38 (R_Expr)


State 17

   37 R_Expr: STRING_LIT .

    $default  reduce using rule 37 (R_Expr)


State 18

   52 R_Expr: "NOT" . R_Expr

    "("         shift, and go to state 12
    "-"         shift, and go to state 13
    IDENT       shift, and go to state 15
    INT_LIT     shift, and go to state 16
    STRING_LIT  shift, and go to state 17
    "NOT"       shift, and go to state 18

    L_Expr  go to state 26
    R_Expr  go to state 36


State 19

    5 Statements: Statements Statement .

    $default  reduce using rule 5 (Statements)


State 20

   18 Statement: Statement_Block .

    $default  reduce using rule 18 (Statement)


State 21

   19 Statement: L_Expr . "=" R_Expr ";"
   20          | L_Expr . ":" IDENT "=" R_Expr ";"
   39 R_Expr: L_Expr .

    ":"  shift, and go to state 37
    "="  shift, and go to state 38

    $default  reduce using rule 39 (R_Expr)


State 22

   21 Statement: R_Expr . ";"
   36 L_Expr: R_Expr . "." IDENT
   40 R_Expr: R_Expr . "+" R_Expr
   41       | R_Expr . "-" R_Expr
   42       | R_Expr . "*" R_Expr
   43       | R_Expr . "/" R_Expr
   45       | R_Expr . "==" R_Expr
   46       | R_Expr . "<=" R_Expr
   47       | R_Expr . "<" R_Expr
   48       | R_Expr . ">=" R_Expr
   49       | R_Expr . ">" R_Expr
   50       | R_Expr . "AND" R_Expr
   51       | R_Expr . "OR" R_Expr
   53       | R_Expr . "." IDENT "(" Actual_Args ")"

    ";"    shift, and go to state 39
    "."    shift, and go to state 40
    "+"    shift, and go to state 41
    "-"    shift, and go to state 42
    "*"    shift, and go to state 43
    "/"    shift, and go to state 44
    "=="   shift, and go to state 45
    "<="   shift, and go to state 46
    ">="   shift, and go to state 47
    "<"    shift, and go to state 48
    ">"    shift, and go to state 49
    "AND"  shift, and go to state 50
    "OR"   shift, and go to state 51


State 23

   15 Class_Body: "{" . Statements Methods "}"

    $default  reduce using rule 4 (Statements)

    Statements  go to state 52


State 24

    6 Class: Class_Signature Class_Body .

    $default  reduce using rule 6 (Class)


State 25

    7 Class_Signature: "class" IDENT "(" . Formal_Args ")" Class_Sig_Extends

    IDENT  shift, and go to state 53

    $default  reduce using rule 10 (Formal_Args)

    Formal_Args  go to state 54


State 26

   39 R_Expr: L_Expr .

    $default  reduce using rule 39 (R_Expr)


State 27

   16 Statement: WHILE R_Expr . Statement_Block
   36 L_Expr: R_Expr . "." IDENT
   40 R_Expr: R_Expr . "+" R_Expr
   41       | R_Expr . "-" R_Expr
   42       | R_Expr . "*" R_Expr
   43       | R_Expr . "/" R_Expr
   45       | R_Expr . "==" R_Expr
   46       | R_Expr . "<=" R_Expr
   47       | R_Expr . "<" R_Expr
   48       | R_Expr . ">=" R_Expr
   49       | R_Expr . ">" R_Expr
   50       | R_Expr . "AND" R_Expr
   51       | R_Expr . "OR" R_Expr
   53       | R_Expr . "." IDENT "(" Actual_Args ")"

    "."    shift, and go to state 40
    "+"    shift, and go to state 41
    "-"    shift, and go to state 42
    "*"    shift, and go to state 43
    "/"    shift, and go to state 44
    "=="   shift, and go to state 45
    "<="   shift, and go to state 46
    ">="   shift, and go to state 47
    "<"    shift, and go to state 48
    ">"    shift, and go to state 49
    "{"    shift, and go to state 14
    "AND"  shift, and go to state 50
    "OR"   shift, and go to state 51

    Statement_Block  go to state 55


State 28

   22 Statement: RETURN ";" .

    $default  reduce using rule 22 (Statement)


State 29

   23 Statement: RETURN R_Expr . ";"
   36 L_Expr: R_Expr . "." IDENT
   40 R_Expr: R_Expr . "+" R_Expr
   41       | R_Expr . "-" R_Expr
   42       | R_Expr . "*" R_Expr
   43       | R_Expr . "/" R_Expr
   45       | R_Expr . "==" R_Expr
   46       | R_Expr . "<=" R_Expr
   47       | R_Expr . "<" R_Expr
   48       | R_Expr . ">=" R_Expr
   49       | R_Expr . ">" R_Expr
   50       | R_Expr . "AND" R_Expr
   51       | R_Expr . "OR" R_Expr
   53       | R_Expr . "." IDENT "(" Actual_Args ")"

    ";"    shift, and go to state 56
    "."    shift, and go to state 40
    "+"    shift, and go to state 41
    "-"    shift, and go to state 42
    "*"    shift, and go to state 43
    "/"    shift, and go to state 44
    "=="   shift, and go to state 45
    "<="   shift, and go to state 46
    ">="   shift, and go to state 47
    "<"    shift, and go to state 48
    ">"    shift, and go to state 49
    "AND"  shift, and go to state 50
    "OR"   shift, and go to state 51


State 30

   17 Statement: IF R_Expr . Statement_Block Elifs Else
   36 L_Expr: R_Expr . "." IDENT
   40 R_Expr: R_Expr . "+" R_Expr
   41       | R_Expr . "-" R_Expr
   42       | R_Expr . "*" R_Expr
   43       | R_Expr . "/" R_Expr
   45       | R_Expr . "==" R_Expr
   46       | R_Expr . "<=" R_Expr
   47       | R_Expr . "<" R_Expr
   48       | R_Expr . ">=" R_Expr
   49       | R_Expr . ">" R_Expr
   50       | R_Expr . "AND" R_Expr
   51       | R_Expr . "OR" R_Expr
   53       | R_Expr . "." IDENT "(" Actual_Args ")"

    "."    shift, and go to state 40
    "+"    shift, and go to state 41
    "-"    shift, and go to state 42
    "*"    shift, and go to state 43
    "/"    shift, and go to state 44
    "=="   shift, and go to state 45
    "<="   shift, and go to state 46
    ">="   shift, and go to state 47
    "<"    shift, and go to state 48
    ">"    shift, and go to state 49
    "{"    shift, and go to state 14
    "AND"  shift, and go to state 50
    "OR"   shift, and go to state 51

    Statement_Block  go to state 57


State 31

   36 L_Expr: R_Expr . "." IDENT
   40 R_Expr: R_Expr . "+" R_Expr
   41       | R_Expr . "-" R_Expr
   42       | R_Expr . "*" R_Expr
   43       | R_Expr . "/" R_Expr
   45       | R_Expr . "==" R_Expr
   46       | R_Expr . "<=" R_Expr
   47       | R_Expr . "<" R_Expr
   48       | R_Expr . ">=" R_Expr
   49       | R_Expr . ">" R_Expr
   50       | R_Expr . "AND" R_Expr
   51       | R_Expr . "OR" R_Expr
   53       | R_Expr . "." IDENT "(" Actual_Args ")"
   55       | "(" R_Expr . ")"

    ")"    shift, and go to state 58
    "."    shift, and go to state 40
    "+"    shift, and go to state 41
    "-"    shift, and go to state 42
    "*"    shift, and go to state 43
    "/"    shift, and go to state 44
    "=="   shift, and go to state 45
    "<="   shift, and go to state 46
    ">="   shift, and go to state 47
    "<"    shift, and go to state 48
    ">"    shift, and go to state 49
    "AND"  shift, and go to state 50
    "OR"   shift, and go to state 51


State 32

   36 L_Expr: R_Expr . "." IDENT
   40 R_Expr: R_Expr . "+" R_Expr
   41       | R_Expr . "-" R_Expr
   42       | R_Expr . "*" R_Expr
   43       | R_Expr . "/" R_Expr
   44       | "-" R_Expr .
   45       | R_Expr . "==" R_Expr
   46       | R_Expr . "<=" R_Expr
   47       | R_Expr . "<" R_Expr
   48       | R_Expr . ">=" R_Expr
   49       | R_Expr . ">" R_Expr
   50       | R_Expr . "AND" R_Expr
   51       | R_Expr . "OR" R_Expr
   53       | R_Expr . "." IDENT "(" Actual_Args ")"

    "."    shift, and go to state 40
    "*"    shift, and go to state 43
    "/"    shift, and go to state 44
    "=="   shift, and go to state 45
    "AND"  shift, and go to state 50
    "OR"   shift, and go to state 51

    "."       [reduce using rule 44 (R_Expr)]
    "/"       [reduce using rule 44 (R_Expr)]
    "AND"     [reduce using rule 44 (R_Expr)]
    "OR"      [reduce using rule 44 (R_Expr)]
    $default  reduce using rule 44 (R_Expr)


State 33

   28 Statement_Block: "{" "}" .

    $default  reduce using rule 28 (Statement_Block)


State 34

    5 Statements: Statements . Statement
   29 Statement_Block: "{" Statements . "}"

    WHILE       shift, and go to state 9
    RETURN      shift, and go to state 10
    IF          shift, and go to state 11
    "("         shift, and go to state 12
    "-"         shift, and go to state 13
    "{"         shift, and go to state 14
    "}"         shift, and go to state 59
    IDENT       shift, and go to state 15
    INT_LIT     shift, and go to state 16
    STRING_LIT  shift, and go to state 17
    "NOT"       shift, and go to state 18

    Statement        go to state 19
    Statement_Block  go to state 20
    L_Expr           go to state 21
    R_Expr           go to state 22


State 35

   54 R_Expr: IDENT "(" . Actual_Args ")"

    "("         shift, and go to state 12
    "-"         shift, and go to state 13
    IDENT       shift, and go to state 15
    INT_LIT     shift, and go to state 16
    STRING_LIT  shift, and go to state 17
    "NOT"       shift, and go to state 18

    $default  reduce using rule 56 (Actual_Args)

    L_Expr       go to state 26
    R_Expr       go to state 60
    Actual_Args  go to state 61


State 36

   36 L_Expr: R_Expr . "." IDENT
   40 R_Expr: R_Expr . "+" R_Expr
   41       | R_Expr . "-" R_Expr
   42       | R_Expr . "*" R_Expr
   43       | R_Expr . "/" R_Expr
   45       | R_Expr . "==" R_Expr
   46       | R_Expr . "<=" R_Expr
   47       | R_Expr . "<" R_Expr
   48       | R_Expr . ">=" R_Expr
   49       | R_Expr . ">" R_Expr
   50       | R_Expr . "AND" R_Expr
   51       | R_Expr . "OR" R_Expr
   52       | "NOT" R_Expr .
   53       | R_Expr . "." IDENT "(" Actual_Args ")"

    "."    shift, and go to state 40
    "+"    shift, and go to state 41
    "-"    shift, and go to state 42
    "*"    shift, and go to state 43
    "/"    shift, and go to state 44
    "=="   shift, and go to state 45
    "<="   shift, and go to state 46
    ">="   shift, and go to state 47
    "<"    shift, and go to state 48
    ">"    shift, and go to state 49
    "AND"  shift, and go to state 50
    "OR"   shift, and go to state 51

    "."       [reduce using rule 52 (R_Expr)]
    "+"       [reduce using rule 52 (R_Expr)]
    "-"       [reduce using rule 52 (R_Expr)]
    "*"       [reduce using rule 52 (R_Expr)]
    "/"       [reduce using rule 52 (R_Expr)]
    "=="      [reduce using rule 52 (R_Expr)]
    "<="      [reduce using rule 52 (R_Expr)]
    ">="      [reduce using rule 52 (R_Expr)]
    "<"       [reduce using rule 52 (R_Expr)]
    ">"       [reduce using rule 52 (R_Expr)]
    "AND"     [reduce using rule 52 (R_Expr)]
    "OR"      [reduce using rule 52 (R_Expr)]
    $default  reduce using rule 52 (R_Expr)


State 37

   20 Statement: L_Expr ":" . IDENT "=" R_Expr ";"

    IDENT  shift, and go to state 62


State 38

   19 Statement: L_Expr "=" . R_Expr ";"

    "("         shift, and go to state 12
    "-"         shift, and go to state 13
    IDENT       shift, and go to state 15
    INT_LIT     shift, and go to state 16
    STRING_LIT  shift, and go to state 17
    "NOT"       shift, and go to state 18

    L_Expr  go to state 26
    R_Expr  go to state 63


State 39

   21 Statement: R_Expr ";" .

    $default  reduce using rule 21 (Statement)


State 40

   36 L_Expr: R_Expr "." . IDENT
   53 R_Expr: R_Expr "." . IDENT "(" Actual_Args ")"

    IDENT  shift, and go to state 64


State 41

   40 R_Expr: R_Expr "+" . R_Expr

    "("         shift, and go to state 12
    "-"         shift, and go to state 13
    IDENT       shift, and go to state 15
    INT_LIT     shift, and go to state 16
    STRING_LIT  shift, and go to state 17
    "NOT"       shift, and go to state 18

    L_Expr  go to state 26
    R_Expr  go to state 65


State 42

   41 R_Expr: R_Expr "-" . R_Expr

    "("         shift, and go to state 12
    "-"         shift, and go to state 13
    IDENT       shift, and go to state 15
    INT_LIT     shift, and go to state 16
    STRING_LIT  shift, and go to state 17
    "NOT"       shift, and go to state 18

    L_Expr  go to state 26
    R_Expr  go to state 66


State 43

   42 R_Expr: R_Expr "*" . R_Expr

    "("         shift, and go to state 12
    "-"         shift, and go to state 13
    IDENT       shift, and go to state 15
    INT_LIT     shift, and go to state 16
    STRING_LIT  shift, and go to state 17
    "NOT"       shift, and go to state 18

    L_Expr  go to state 26
    R_Expr  go to state 67


State 44

   43 R_Expr: R_Expr "/" . R_Expr

    "("         shift, and go to state 12
    "-"         shift, and go to state 13
    IDENT       shift, and go to state 15
    INT_LIT     shift, and go to state 16
    STRING_LIT  shift, and go to state 17
    "NOT"       shift, and go to state 18

    L_Expr  go to state 26
    R_Expr  go to state 68


State 45

   45 R_Expr: R_Expr "==" . R_Expr

    "("         shift, and go to state 12
    "-"         shift, and go to state 13
    IDENT       shift, and go to state 15
    INT_LIT     shift, and go to state 16
    STRING_LIT  shift, and go to state 17
    "NOT"       shift, and go to state 18

    L_Expr  go to state 26
    R_Expr  go to state 69


State 46

   46 R_Expr: R_Expr "<=" . R_Expr

    "("         shift, and go to state 12
    "-"         shift, and go to state 13
    IDENT       shift, and go to state 15
    INT_LIT     shift, and go to state 16
    STRING_LIT  shift, and go to state 17
    "NOT"       shift, and go to state 18

    L_Expr  go to state 26
    R_Expr  go to state 70


State 47

   48 R_Expr: R_Expr ">=" . R_Expr

    "("         shift, and go to state 12
    "-"         shift, and go to state 13
    IDENT       shift, and go to state 15
    INT_LIT     shift, and go to state 16
    STRING_LIT  shift, and go to state 17
    "NOT"       shift, and go to state 18

    L_Expr  go to state 26
    R_Expr  go to state 71


State 48

   47 R_Expr: R_Expr "<" . R_Expr

    "("         shift, and go to state 12
    "-"         shift, and go to state 13
    IDENT       shift, and go to state 15
    INT_LIT     shift, and go to state 16
    STRING_LIT  shift, and go to state 17
    "NOT"       shift, and go to state 18

    L_Expr  go to state 26
    R_Expr  go to state 72


State 49

   49 R_Expr: R_Expr ">" . R_Expr

    "("         shift, and go to state 12
    "-"         shift, and go to state 13
    IDENT       shift, and go to state 15
    INT_LIT     shift, and go to state 16
    STRING_LIT  shift, and go to state 17
    "NOT"       shift, and go to state 18

    L_Expr  go to state 26
    R_Expr  go to state 73


State 50

   50 R_Expr: R_Expr "AND" . R_Expr

    "("         shift, and go to state 12
    "-"         shift, and go to state 13
    IDENT       shift, and go to state 15
    INT_LIT     shift, and go to state 16
    STRING_LIT  shift, and go to state 17
    "NOT"       shift, and go to state 18

    L_Expr  go to state 26
    R_Expr  go to state 74


State 51

   51 R_Expr: R_Expr "OR" . R_Expr

    "("         shift, and go to state 12
    "-"         shift, and go to state 13
    IDENT       shift, and go to state 15
    INT_LIT     shift, and go to state 16
    STRING_LIT  shift, and go to state 17
    "NOT"       shift, and go to state 18

    L_Expr  go to state 26
    R_Expr  go to state 75


State 52

    5 Statements: Statements . Statement
   15 Class_Body: "{" Statements . Methods "}"

    WHILE       shift, and go to state 9
    RETURN      shift, and go to state 10
    IF          shift, and go to state 11
    "("         shift, and go to state 12
    "-"         shift, and go to state 13
    "{"         shift, and go to state 14
    IDENT       shift, and go to state 15
    INT_LIT     shift, and go to state 16
    STRING_LIT  shift, and go to state 17
    "NOT"       shift, and go to state 18

    $default  reduce using rule 30 (Methods)

    Statement        go to state 19
    Statement_Block  go to state 20
    Methods          go to state 76
    L_Expr           go to state 21
    R_Expr           go to state 22


State 53

   11 Formal_Args: IDENT . ":" IDENT Idents

    ":"  shift, and go to state 77


State 54

    7 Class_Signature: "class" IDENT "(" Formal_Args . ")" Class_Sig_Extends

    ")"  shift, and go to state 78


State 55

   16 Statement: WHILE R_Expr Statement_Block .

    $default  reduce using rule 16 (Statement)


State 56

   23 Statement: RETURN R_Expr ";" .

    $default  reduce using rule 23 (Statement)


State 57

   17 Statement: IF R_Expr Statement_Block . Elifs Else

    ELIF  shift, and go to state 79

    $default  reduce using rule 24 (Elifs)

    Elifs  go to state 80


State 58

   55 R_Expr: "(" R_Expr ")" .

    $default  reduce using rule 55 (R_Expr)


State 59

   29 Statement_Block: "{" Statements "}" .

    $default  reduce using rule 29 (Statement_Block)


State 60

   36 L_Expr: R_Expr . "." IDENT
   40 R_Expr: R_Expr . "+" R_Expr
   41       | R_Expr . "-" R_Expr
   42       | R_Expr . "*" R_Expr
   43       | R_Expr . "/" R_Expr
   45       | R_Expr . "==" R_Expr
   46       | R_Expr . "<=" R_Expr
   47       | R_Expr . "<" R_Expr
   48       | R_Expr . ">=" R_Expr
   49       | R_Expr . ">" R_Expr
   50       | R_Expr . "AND" R_Expr
   51       | R_Expr . "OR" R_Expr
   53       | R_Expr . "." IDENT "(" Actual_Args ")"
   57 Actual_Args: R_Expr . R_Exprs

    "."    shift, and go to state 40
    ","    shift, and go to state 81
    "+"    shift, and go to state 41
    "-"    shift, and go to state 42
    "*"    shift, and go to state 43
    "/"    shift, and go to state 44
    "=="   shift, and go to state 45
    "<="   shift, and go to state 46
    ">="   shift, and go to state 47
    "<"    shift, and go to state 48
    ">"    shift, and go to state 49
    "AND"  shift, and go to state 50
    "OR"   shift, and go to state 51

    $default  reduce using rule 58 (R_Exprs)

    R_Exprs  go to state 82


State 61

   54 R_Expr: IDENT "(" Actual_Args . ")"

    ")"  shift, and go to state 83


State 62

   20 Statement: L_Expr ":" IDENT . "=" R_Expr ";"

    "="  shift, and go to state 84


State 63

   19 Statement: L_Expr "=" R_Expr . ";"
   36 L_Expr: R_Expr . "." IDENT
   40 R_Expr: R_Expr . "+" R_Expr
   41       | R_Expr . "-" R_Expr
   42       | R_Expr . "*" R_Expr
   43       | R_Expr . "/" R_Expr
   45       | R_Expr . "==" R_Expr
   46       | R_Expr . "<=" R_Expr
   47       | R_Expr . "<" R_Expr
   48       | R_Expr . ">=" R_Expr
   49       | R_Expr . ">" R_Expr
   50       | R_Expr . "AND" R_Expr
   51       | R_Expr . "OR" R_Expr
   53       | R_Expr . "." IDENT "(" Actual_Args ")"

    ";"    shift, and go to state 85
    "."    shift, and go to state 40
    "+"    shift, and go to state 41
    "-"    shift, and go to state 42
    "*"    shift, and go to state 43
    "/"    shift, and go to state 44
    "=="   shift, and go to state 45
    "<="   shift, and go to state 46
    ">="   shift, and go to state 47
    "<"    shift, and go to state 48
    ">"    shift, and go to state 49
    "AND"  shift, and go to state 50
    "OR"   shift, and go to state 51


State 64

   36 L_Expr: R_Expr "." IDENT .
   53 R_Expr: R_Expr "." IDENT . "(" Actual_Args ")"

    "("  shift, and go to state 86

    $default  reduce using rule 36 (L_Expr)


State 65

   36 L_Expr: R_Expr . "." IDENT
   40 R_Expr: R_Expr . "+" R_Expr
   40       | R_Expr "+" R_Expr .
   41       | R_Expr . "-" R_Expr
   42       | R_Expr . "*" R_Expr
   43       | R_Expr . "/" R_Expr
   45       | R_Expr . "==" R_Expr
   46       | R_Expr . "<=" R_Expr
   47       | R_Expr . "<" R_Expr
   48       | R_Expr . ">=" R_Expr
   49       | R_Expr . ">" R_Expr
   50       | R_Expr . "AND" R_Expr
   51       | R_Expr . "OR" R_Expr
   53       | R_Expr . "." IDENT "(" Actual_Args ")"

    "."    shift, and go to state 40
    "*"    shift, and go to state 43
    "/"    shift, and go to state 44
    "=="   shift, and go to state 45
    "AND"  shift, and go to state 50
    "OR"   shift, and go to state 51

    "."       [reduce using rule 40 (R_Expr)]
    "/"       [reduce using rule 40 (R_Expr)]
    "AND"     [reduce using rule 40 (R_Expr)]
    "OR"      [reduce using rule 40 (R_Expr)]
    $default  reduce using rule 40 (R_Expr)


State 66

   36 L_Expr: R_Expr . "." IDENT
   40 R_Expr: R_Expr . "+" R_Expr
   41       | R_Expr . "-" R_Expr
   41       | R_Expr "-" R_Expr .
   42       | R_Expr . "*" R_Expr
   43       | R_Expr . "/" R_Expr
   45       | R_Expr . "==" R_Expr
   46       | R_Expr . "<=" R_Expr
   47       | R_Expr . "<" R_Expr
   48       | R_Expr . ">=" R_Expr
   49       | R_Expr . ">" R_Expr
   50       | R_Expr . "AND" R_Expr
   51       | R_Expr . "OR" R_Expr
   53       | R_Expr . "." IDENT "(" Actual_Args ")"

    "."    shift, and go to state 40
    "*"    shift, and go to state 43
    "/"    shift, and go to state 44
    "=="   shift, and go to state 45
    "AND"  shift, and go to state 50
    "OR"   shift, and go to state 51

    "."       [reduce using rule 41 (R_Expr)]
    "/"       [reduce using rule 41 (R_Expr)]
    "AND"     [reduce using rule 41 (R_Expr)]
    "OR"      [reduce using rule 41 (R_Expr)]
    $default  reduce using rule 41 (R_Expr)


State 67

   36 L_Expr: R_Expr . "." IDENT
   40 R_Expr: R_Expr . "+" R_Expr
   41       | R_Expr . "-" R_Expr
   42       | R_Expr . "*" R_Expr
   42       | R_Expr "*" R_Expr .
   43       | R_Expr . "/" R_Expr
   45       | R_Expr . "==" R_Expr
   46       | R_Expr . "<=" R_Expr
   47       | R_Expr . "<" R_Expr
   48       | R_Expr . ">=" R_Expr
   49       | R_Expr . ">" R_Expr
   50       | R_Expr . "AND" R_Expr
   51       | R_Expr . "OR" R_Expr
   53       | R_Expr . "." IDENT "(" Actual_Args ")"

    "."    shift, and go to state 40
    "/"    shift, and go to state 44
    "=="   shift, and go to state 45
    "AND"  shift, and go to state 50
    "OR"   shift, and go to state 51

    "."       [reduce using rule 42 (R_Expr)]
    "/"       [reduce using rule 42 (R_Expr)]
    "AND"     [reduce using rule 42 (R_Expr)]
    "OR"      [reduce using rule 42 (R_Expr)]
    $default  reduce using rule 42 (R_Expr)


State 68
